bugfix(#383): fixed display of fallback avatar images for chrome-based browsers, widened live mode control on mobile

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1548,6 +1548,7 @@ button:disabled {
     transition: border-color 0.2s, box-shadow 0.2s;
     display: inline-block;
     position: relative;
+    overflow: hidden;
 }
 
 .avatar.small {
@@ -1560,14 +1561,16 @@ button:disabled {
 }
 .avatar::after {
     content: attr(alt);
-    font-size: 36px;
-    font-family: var(--serif-font);
-    font-weight: lighter;
     color: white;
+    font-size: 2.4rem;
+    top: 0;
     position: absolute;
-    top: 8px;
-    width: 64px;
-    height: 64px;
+    background: var(--color-background-dark);
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 10px;
+    font-family: var(--serif-font);
 }
 
 .avatar:not(:has(img))::after {
@@ -1854,6 +1857,10 @@ button:disabled {
 
     .coordinate-input {
         min-width: unset;
+    }
+
+    .auto-update-overlay {
+        width: 80%;
     }
 }
 
@@ -2364,3 +2371,4 @@ button:disabled {
         width: 30%;
     }
 }
+
